# RAG_Legal_assistant

./: LICENSE  README.md  pyproject.toml
Crowl4AI/: court_decisions_arbitrag.md  court_decisions_combined.md  court_decisions_combined.txt  court_decisions_obsh_urisdikcii.md  parsing_Crawl4AI.ipynb
Data/: parsed_output.json  recursive_chunks.json
Data/chroma_db/recursive_chunks/: chroma.sqlite3
Fine_tune_Embeddings/: Prepear_data.ipynb  RusSyntheticEvaluation.py  decoded_queries_Chunking_Evaluation_filtered.csv  decoded_queries_for_finetune.csv  fine_tune_embrd (2).ipynb
Notebooks/: RAG.ipynb
chunking_evaluation/: chunk_eval.ipynb  match_data.ipynb
