[project]
name = "rag-legal-asist"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fitz>=0.0.1.dev2",
    "langchain>=0.3.25",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.24",
    "langchain-core>=0.3.62",
    "langchain-openai>=0.3.18",
    "openai>=1.82.0",
    "pydantic>=2.0",
    "pypdf>=5.5.0",
]
